<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    tools:context=".dashboard.documents.DocumentsFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="@dimen/_11sdp"
            android:id="@+id/tvAddNote"
            android:text="@string/add_new_note"
            android:background="@drawable/button_add_background"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_5sdp"
            android:fontFamily="sans-serif-medium"
            android:padding="@dimen/_6sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:fontFamily="@font/ibmplexmono_semibold"
            android:text="@string/main_app_name"
            android:layout_alignParentTop="true"
            android:id="@+id/tvTopTitle"
            android:layout_marginTop="@dimen/_8sdp"
            android:textSize="@dimen/_24sdp"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:layout_height="wrap_content"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:background="@drawable/search_edit_text_bg"
            android:paddingVertical="@dimen/_11sdp"
            android:hint="@string/search"
            android:textColorHint="@color/grey_card"
            android:inputType="textAutoComplete"
            android:textColor="@color/white"
            android:gravity="center"
            android:id="@+id/edtSearchNote"
            android:paddingHorizontal="@dimen/_7sdp"
            android:fontFamily="sans-serif-medium"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_below="@id/tvTopTitle"
            android:layout_height="wrap_content"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recvNoteCards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/edtSearchNote"
            android:layout_marginTop="@dimen/_8sdp"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"

            tools:itemCount="14"
            tools:listitem="@layout/note_card" />
        <TextView
            android:layout_width="wrap_content"
            android:fontFamily="@font/ibmplexmono_semibold"
            android:text="No Notes Found_"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_below="@id/edtSearchNote"
            android:visibility="visible"
            android:layout_centerInParent="true"
            android:id="@+id/tvNoNotes"
            android:textSize="@dimen/_24sdp"
            android:textColor="@color/grey_black"
            android:layout_height="wrap_content"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:backgroundTint="@color/grey_edt"
            android:background="@color/white"
            android:src="@drawable/plus"
            android:layout_marginBottom="@dimen/_7sdp"
            android:id="@+id/fabCreateNote"
            android:layout_alignParentBottom="true"
            app:borderWidth="@dimen/_2sdp"
            android:layout_alignParentEnd="true"
            android:visibility="gone"
            android:layout_marginTop="@dimen/_minus56sdp"
            android:layout_marginEnd="@dimen/_18sdp"
            app:backgroundTint="@color/grey_card"
            android:layout_height="wrap_content"/>





    </RelativeLayout>

</LinearLayout>