<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".dashboard.viewnote.ViewNoteActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:textSize="@dimen/_11sdp"
            android:text="Back"
            android:id="@+id/btnBackViewNote"
            android:layout_alignParentStart="true"
            android:layout_marginStart="@dimen/_6sdp"
            android:fontFamily="sans-serif-medium"
            android:layout_centerVertical="true"

            android:background="@drawable/button_add_background"
            android:padding="@dimen/_5sdp"
            android:textColor="@color/green_text"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:fontFamily="@font/ibmplexmono_semibold"
            android:text="@string/main_app_name"
            android:id="@+id/tvTopTitle"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:textSize="@dimen/_24sdp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"/>

    </RelativeLayout>
    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@color/grey_card"
        app:cardBackgroundColor="@color/white"
        app:cardElevation="@dimen/_5sdp"
        app:cardCornerRadius="@dimen/_11sdp"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:textCursorDrawable="@drawable/cursor_edt_black"
                android:hint="@string/enter_title"
                android:textColorHint="@color/grey_black"
                android:gravity="center"
                android:inputType="textAutoComplete"
                android:imeOptions="actionNext"
                android:textColor="@color/black"
                android:fontFamily="@font/ibmplexmono_bold"
                android:textSize="@dimen/_18sdp"
                android:id="@+id/tvTitle"
                android:textColorHighlight="@color/white"
                android:background="@null"
                android:layout_marginHorizontal="@dimen/_7sdp"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/_5sdp"
                android:textCursorDrawable="@drawable/cursor_edt_black"
                android:gravity="start"
                android:textColorHint="@color/grey_black"
                android:minLines="15"
                android:background="@null"
                android:singleLine="false"
                android:maxLines="20"
                android:hint="@string/enter_note_description"
                android:inputType="textAutoComplete"
                android:textColor="@color/black"
                android:fontFamily="@font/ibmplexmono_semibold"
                android:imeOptions="actionDone"
                android:textColorHighlight="@color/white"
                android:textSize="@dimen/_12sdp"
                android:id="@+id/tvDescription"
                android:paddingVertical="@dimen/_12sdp"
                android:layout_marginHorizontal="@dimen/_7sdp"
                android:layout_height="wrap_content"/>







        </LinearLayout>








    </com.google.android.material.card.MaterialCardView>

  </LinearLayout>